feat: Update script

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>李氏雯公族譜</title>
 
 <link rel="stylesheet" href="styles/main.css">
+<script src="https://kit.fontawesome.com/9377025178.js" crossorigin="anonymous"></script>
 <script src="scripts/app.js"></script>
 </head>
 <body>
@@ -13,7 +14,7 @@
 <template id="selfNodeTemplate">
     <div class="parentsNodes"></div>
     <div class="selfNode">
-        <div class="self node">
+        <div class="node">
             <div class="title"></div>
             <div class="name"></div>
             <div class="life"></div>
@@ -26,7 +27,7 @@
 </template>
 
 <template id="nodeTemplate">
-    <div class="other node">
+    <div class="node">
         <div class="title"></div>
         <div class="name"></div>
         <div class="life"></div>
