feat: Fix display

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 <title>李氏雯公族譜</title>
 
-<link rel="stylesheet" href="styles/main.css">
+<!-- Place your kit's code here -->
 <script src="https://kit.fontawesome.com/9377025178.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="styles/main.css">
 <script src="scripts/app.js"></script>
 </head>
 <body>
